--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
     "sanitize-html": "^2.4.0",
     "styled-components": "^5.3.0",
     "uuid": "^8.3.2",
